<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiscoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_sound">Lo que suena</string>
    <string name="descriptor_image">Imagen de Fondo</string>
    <string name="current_song">Bailando- Enrique Iglesias</string>
    <string name="txt_quieres">¿Qué quieres escuchar?</string>
    <string name="txt_button_send_song">Listar Canción</string>

    <color name="custom_color">#3FA9F4</color>

    <string name="textCalifica">Califica nuestro servicio</string>
    <string name="TextCalificaMusica">Califica nuestra música</string>
    <string name="textOpinion">¿Qué opinión tienes de nosotros?</string>
    <string name="editIngresaOpinion"></string>
    <string name="botonEnviarOpinion">Enviar</string>
    <string name="botonEnviar">Enviar</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="TextEventos">Eventos</string>
    <string name="txt_follow_songs">Lo que sigue</string>
    <string name="title_activity_opinion">Danos tu opinión</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="contenDescriptionImage">Imagen del evento</string>
    <string name="stringEventos">Nuestros Eventos</string>
    <string name="title_activity_login_atcivity">LoginAtcivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="menu1">Cerrar Sesion</string>
    <string name="ingresoUsuario">Ingrese su nuevo nombre de usuario</string>
    <string name="ingresoContrasena">Ingrese su contraseña</string>
    <string name="confirmarContrasena">Confirme su contraseña</string>
    <string name="ingresoNombre">Ingrese su nombre</string>
    <string name="ingresoCorreo">Ingrese su correo electrónico</string>
    <string name="textRegistrar">Registrarse</string>

</resources>