<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr10.discoapp.MusicActivity" >

    <TextView
        android:id="@+id/loquesuena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/txt_sound"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/music_imagen"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/descriptor_image"
        android:src="@drawable/notas_musicales" />

    <TextView
        android:id="@+id/current_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.10"
        android:text="@string/current_song"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/cancion_dimension" />

    <TextView
        android:id="@+id/txtQueQuieres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.14"
        android:text="@string/txt_quieres"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/request_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/custom_color"
        android:text="@string/txt_button_send_song" />

    <TextView
        android:id="@+id/txtLoqueSigue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.18"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txt_follow_songs"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_weight="0.05" >
    </ListView>

</LinearLayout>